Work on response design; adds stopgap fix for form breaking page width

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -77,7 +77,7 @@ form select, form input {
 }
 
 .form-divs {
-  width: 50%;
+  width: 100%;
   display: inline-block;
   vertical-align: top;
 }
